# E2E_NLP_Text_Summ_Hugface

./: .gitignore  README.md  app.py  main.py  pyproject.toml  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_mode_training.ipynb  05_model_evaluation.ipynb  text_summarization.ipynb
src/textSummarizer/config/: configuration.py
src/textSummarizer/conponents/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py
src/textSummarizer/utils/: common.py
