[tool.poetry]
name = "e2e-nlp-text-summ-hugface"
version = "0.1.0"
description = ""
authors = ["amaithi-sam <amaithichirasan.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["sentencepiece"], version = "^4.40.0"}
datasets = "^2.19.0"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
